--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,60 @@
+/* CSS Reset */
+
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
-:root {
-    --navbar-height: 60px;
+html {
+    scroll-behavior: smooth;
 }
+
+
+/* CSS Variables */
+
+:root {
+    --navbar-height: 59px;
+}
+
+
+/* Navigation Bar */
 
 #navbar {
     display: flex;
     align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: sticky;
+    top: 0px;
 }
 
-#navbar ::before {
+#navbar::before {
     content: "";
-    background-color: rgb(129, 119, 119);
+    background-color: black;
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 10%;
+    top: 0px;
+    left: 0px;
+    height: 100%;
     width: 100%;
     z-index: -1;
-    opacity: 0.9;
+    opacity: 0.7;
 }
+
+
+/* Navigation Bar: Logo and Image */
+
+#logo {
+    margin: 10px 34px;
+}
+
+#logo img {
+    height: 59px;
+    margin: 3px 6px;
+}
+
+
+/* Navigation Bar: List Styling */
 
 #navbar ul {
     display: flex;
-    align-items: center;
-    justify-content: center;
     font-family: 'Baloo Paaji 2', cursive;
 }
 
@@ -41,201 +64,197 @@
 }
 
 #navbar ul li a {
-    color: rgb(0, 0, 0);
+    color: white;
     display: block;
-    padding: 4px 36px;
-    /* border: 2px solid red; */
-    border-radius: 23px;
+    padding: 3px 22px;
+    border-radius: 20px;
     text-decoration: none;
 }
 
 #navbar ul li a:hover {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    color: black;
+    background-color: white;
 }
 
-#logo {
-    margin: 0px 30px;
-}
 
-#logo img {
-    height: 130px;
-    width: 130px;
-}
+/* Home Section */
 
 #home {
     display: flex;
     flex-direction: column;
     padding: 3px 200px;
-    height: 528px;
+    height: 550px;
     justify-content: center;
     align-items: center;
 }
 
-#home ::before {
+#home::before {
     content: "";
-    background: url('../bg1.jpg') no-repeat center center/cover;
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 92%;
+    background: url('../bg1.jpg') no-repeat center center/cover;
+    height: 645px;
+    top: 0px;
+    left: 0px;
     width: 100%;
     z-index: -1;
-    opacity: 0.79;
+    opacity: 0.89;
 }
 
 #home h1 {
     color: rgb(0, 0, 0);
     text-align: center;
-    margin: 12px;
-    font-family: 'Ubuntu', sans-serif;
-    }
+    font-family: 'Baloo Paaji 2', cursive;
+}
+
 #home p {
     color: rgb(0, 0, 0);
-    /* padding: 8px 119px; */
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-family: 'Ubuntu', sans-serif;
 }
 
-.h-primary {
-    font-size: 3rem;
-    padding: 20px;
-    font-family: 'Ubuntu', sans-serif;
-}
 
-.h-secondary {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 2rem;
-    padding: 12px;
-}
-
-.center {
-    text-align: center;
-}
-
-.bttn {
-    padding: 10px 30px;
-    border: 2px solid #d0c5c5;
-    background-color: #6c3723;
-    color: #f3f5f5;
-    margin: 18px 18px;
-    font-size: 1.7rem;
-    border-radius: 16px;
-    cursor: pointer;
-    
-}
+/* Services Section */
 
 #services {
-    margin: 34px 12px;
+    margin: 34px;
     display: flex;
 }
-#services-container{
-    position: relative;
-}
-.services-container::before{
+
+#services-container::before {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 101.6%;
-    z-index: -1;
-    opacity: 0.7;
     background: url('../bg2.jpg') no-repeat center center/cover;
+    height: 156.8%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.89;
 }
 
 #services .box {
     border: 2px solid brown;
-    margin:19px 6px;
-    padding:34px;
-    border-radius: 33px;
-    background-color: rgb(241, 179, 117);
+    padding: 34px;
+    margin: 2px 55px;
+    border-radius: 28px;
+    background: rgb(162, 189, 120);
+    margin-bottom: 20px;
 }
 
 #services .box img {
-    height: 140px;
-    display: block;
+    height: 160px;
     margin: auto;
+    display: block;
 }
-#services .box p{
+
+#services .box p {
+    text-align: justify;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 0.9rem;
 }
-#client-section{
-    height: 313px;
+
+
+/* Clients Section */
+
+#client-section {
     position: relative;
 }
 
-#client-section::before{
+#client-section::before {
     content: "";
     position: absolute;
-    background: url("../bg3.jpg") no-repeat center center/cover;;
-    height: 100%;
+    background: url('../bg3.jpg') no-repeat center center/cover;
     width: 100%;
+    height: 100%;
     z-index: -1;
-    opacity: 0.65;
+    opacity: 1;
 }
 
-#writtenText{
-    margin:43px 20px;
-
-}
-
-#clients{
+#clients {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.client-item{
-    padding: 15px 40px;    
+.client-item {
+    padding: 34px;
 }
 
-#clients img{
-    height: 161px;
+#clients img {
+    height: 124px;
 }
 
-#contact{
+
+/* Contact Section */
+
+#contact {
     position: relative;
 }
 
-#contact::before{
+#contact::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.7;
+    opacity: 0.9;
     background: url('../contact2.jpg') no-repeat center center/cover;
 }
 
-footer{
-    background-color: black;
-    color: white;
-    padding: 6px 10px;
-    font-size: 1.1rem; 
-    font-family: 'Baloo Paaji 2', cursive;
-}
-
-#contact-box{
+#contact-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom:34px ;
+    padding-bottom: 34px;
 }
 
-#contact-box input,#contact-box textarea{
+#contact-box input,
+#contact-box textarea {
     width: 100%;
     padding: 0.5rem;
     border-radius: 9px;
     font-size: 1.1rem;
-    border:2px solid rgb(69 20 20);
-
 }
-#contact-box form{
+
+#contact-box form {
     width: 40%;
 }
-#contact-box label{
+
+#contact-box label {
     font-size: 1.3rem;
     font-family: 'Ubuntu', sans-serif;
-    font-weight: bold;
+}
+
+footer {
+    background: black;
+    color: white;
+    padding: 9px 20px;
+}
+
+
+/* Utility Classes */
+
+.h-primary {
+    font-family: 'Baloo Paaji 2', cursive;
+    font-size: 3.8rem;
+    padding: 12px;
+}
+
+.h-secondary {
+    font-family: 'Baloo Paaji 2', cursive;
+    font-size: 2.3rem;
+    padding: 12px;
+}
+
+.btn {
+    padding: 6px 20px;
+    border: 2px solid rgb(56, 26, 26);
+    background-color: rgb(108, 114, 50);
+    color: rgb(255, 255, 255);
+    margin: 17px;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.center {
+    text-align: center;
 }
